Stop overflow-y in main content

--- a/src/MainContent.css
+++ b/src/MainContent.css
@@ -3,6 +3,7 @@
     /*flex-grow: 1;*/
     /*overflow-y: scroll;*/
     overflow-x: auto;
+    overflow-y: hidden;
     padding-bottom: 150px;
 }
 
